--- a/src/content/posts/1.md
+++ b/src/content/posts/1.md
@@ -1,114 +1,33 @@
 ---
-pubDate: 2024-01-01
-author: Alejandro Martinez
-title: Because the universe needed a framework
-description: "Embark on a cosmic journey with astro.js, the framework that makes interstellar development a breeze. Pair it with Tailwind CSS for a design that's out of this world"
+pubDate: 2024-08-16
+author: jonald
+title: a night in oakland
+description: August 8, 2024
 image:
-  url: "https://images.unsplash.com/photo-1618580747643-7ecc7240ba4e?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+  url: "https://images.ctfassets.net/wes1vt7sf9ho/3GjhrI52yp13TdBOFg4YgO/38367b885caa93e78d576ffd7d5193ef/AS_1.jpeg?w=1984&q=90"
   alt: "#"
-tags: ["HTML", "Tailwind"]
+tags: []
 ---
 
-Here is a sample of some basic Markdown syntax that can be used when writing Markdown content in Astro.
 
-## Headings
+The evening began with the Oakland sunshine beaming down on me with a suprising intensity as I exited the BART station. No matter how many times I comment on the atypical and isolated briskness of the San Francisco weather, I always forget about the idea until I'm heating up under a unnecessary fleece or heavy shirt. Such was the case as I made my way up the stairs, collected my bearings, and head out towards the sushi restaurant. 
 
-The following HTML `<h1>`—`<h6>` elements represent six levels of section headings. `<h1>` is the highest section level while `<h6>` is the lowest.
+The streets of Oakland were suprisingly quiet, with not too much to catch your attention in terms of people or automobiles. Somehow both the streets and sidwalks seemed wider than they should have been, which would have given the area a suprisingly eerie feeling had it not been for the pleasant sunshine and excitement of the evening. I arrived at the restaurant a bit ahead of schedule but received a text from Joshua that he and Caroline would be arriving shortly. I loitered around, pretending to read the menu in front of the store, trying to make myself appear busy whilst just killing a little bit of time. 
 
-# H1
+They arrived soon after, I greeted them by shaking their hands. They informed me of two more friends who were running late. We informed the hostess of our arrival and took our seats in the restaurant anyways.
 
-## H2
+It was a very nice looking restaurant. Behind my seat and the diners behind me was a very large mural of three women in a traditional Japanese art style, I think there is a term for it but I couldn't find the word. They watched over us as we perused the enjoyably small menu. Gavin and Ashyln arrived soon after we had settled in, we made our introductions, and turned our attentions back to the menu.
 
-### H3
+Sake is an interesting drink in that it has a very distinct taste but I can't decide if I enjoy it all. Despite my only slight affection for the spirit, the situation of night certainly called for it, and we decided on a bottle for the table. We each ordered a bowl of ramen, mine was a perfectly well-balanced bowl with just enough spice to keep me engaged for the whole meal without overdoing the pain. 
 
-#### H4
+Dinner ended, we paid, and we exited the building to a darker sky than the one we left behind. A couple danced on the sidewalk to some Afro beats, I couldn't help but watch with a smile on my face. The smile turned to slight annoyance when I realized they were simply dancing to film a social media video, which shouldn't annoy anyone but it does to me unfortunately. We were running out of time but decided on getting one last drink before heading to the venue.
 
-##### H5
+Five minutes were spent in the cramped corner of a liquor store for all of us to decide on a drink. I selected a tall boy pale ale that I had consumed dozens of in college, not a very delicious or refreshing drink but what it lacks in taste in makes up for in nostalgia. We paid and we were on our way.
 
-###### H6
+I've always enjoyed the first moments entering a music venue. You are stripped away from the daylight and familiar sense of the outside world and thrown into a dark mass of people all staring straight ahead at the same thing. Usually it's just a collection of instruments, but this time the band also placed a large inflatable fish head towards the back behind the drummer. It was a very large fish, larger than it needed to be. It was very silly.
 
-## Paragraph
+The show got started and ended all too soon. It was a whirlwind of smart guitar riffs, brilliant vocal melodies, driving drum loops, and impressive performances at every vertex. I took a second during some of my favorite songs to look up at the geometric patterns on the ceiling and immerse myself in the loud, distorted, shimmering guitars. It's a feeling unlike any other.
 
-Xerum, quo qui aut unt expliquam qui dolut labo. Aque venitatiusda cum, voluptionse latur sitiae dolessi aut parist aut dollo enim qui voluptate ma dolestendit peritin re plis aut quas inctum laceat est volestemque commosa as cus endigna tectur, offic to cor sequas etum rerum idem sintibus eiur? Quianimin porecus evelectur, cum que nis nust voloribus ratem aut omnimi, sitatur? Quiatem. Nam, omnis sum am facea corem alique molestrunt et eos evelece arcillit ut aut eos eos nus, sin conecerem erum fuga. Ri oditatquam, ad quibus unda veliamenimin cusam et facea ipsamus es exerum sitate dolores editium rerore eost, temped molorro ratiae volorro te reribus dolorer sperchicium faceata tiustia prat.
+After the show ended, we waddled our way outdoors, finding space on the street to walk in the direction towards our destinations. I bid farewell to Gavin & Ashlyn, and then Joshua & Caroline, and then I was on my own. I walked down the steps of the 19th street BART station and began my journey back home. The train was alive, mainly with concert goers, everyone a bit tired but still whirring with leftover energy. An already drunken man held up a bottle of beer and asked if anyone had an opener. I prepared to surrender my trusty keychain opener to him, but was usurped by another good samairitan one row closer. They exchanged a fist bump.
 
-Itatur? Quiatae cullecum rem ent aut odis in re eossequodi nonsequ idebis ne sapicia is sinveli squiatum, core et que aut hariosam ex eat.
-
-
-
-## Images
-
-![This is a placeholder image description](https://images.unsplash.com/photo-1618580747643-7ecc7240ba4e?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
-
-## Blockquotes
-
-The blockquote element represents content that is quoted from another source, optionally with a citation which must be within a `footer` or `cite` element, and optionally with in-line changes such as annotations and abbreviations.
-
-#### Blockquote without attribution
-
-> Tiam, ad mint andaepu dandae nostion secatur sequo quae.
-> **Note** that you can use _Markdown syntax_ within a blockquote.
-
-#### Blockquote with attribution
-
-> Don't communicate by sharing memory, share memory by communicating.<br>
-> — <cite>Rob Pike[^1]</cite>
-
-[^1]: The above quote is excerpted from Rob Pike's [talk](https://www.youtube.com/watch?v=PAAkCSZUG1c) during Gopherfest, November 18, 2015.
-
-## Tables
-
-| Italics   | Bold     | Code   |
-| --------- | -------- | ------ |
-| _italics_ | **bold** | `code` |
-
-## Code Blocks
-
-```html
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Example HTML5 Document</title>
-  </head>
-  <body>
-    <p>Test</p>
-  </body>
-</html>
-```
-
-## List Types
-
-#### Ordered List
-
-1. First item
-2. Second item
-3. Third item
-
-#### Unordered List
-
-- List item
-- Another item
-- And another item
-
-#### Nested list
-
-- Fruit
-  - Apple
-  - Orange
-  - Banana
-- Dairy
-  - Milk
-  - Cheese
-
-## Other Elements — abbr, sub, sup, kbd, mark
-
-<abbr title="Graphics Interchange Format">GIF</abbr> is a bitmap image format.
-
-H<sub>2</sub>O
-
-X<sup>n</sup> + Y<sup>n</sup> = Z<sup>n</sup>
-
-Press <kbd><kbd>CTRL</kbd>+<kbd>ALT</kbd>+<kbd>Delete</kbd></kbd> to end the session.
-
-Most <mark>salamanders</mark> are nocturnal, and hunt for insects, worms, and other small creatures.
-
+I got off at Embarcadero and decided to take the N line back to my neighborhood. The tram came within a minute and I got off 15 minutes later. The night had a perfect crispness to it. The streets weren't very lively, just a few individuals walking purposefully to their next stop. You would expect a bit more action given the weather, but I suppose everyone else shared the same weariness I had after a long night out. I finally reached my apartment and took off my shoes and socks as soon as I could.
