--- a/src/content/posts/1.md
+++ b/src/content/posts/1.md
@@ -6,9 +6,9 @@ description: August 8, 2024
 image:
   url: "https://images.ctfassets.net/wes1vt7sf9ho/3GjhrI52yp13TdBOFg4YgO/38367b885caa93e78d576ffd7d5193ef/AS_1.jpeg?w=1984&q=90"
   alt: "#"
+  info: La Linea Milano - Andrew Savage
 tags: []
 ---
-
 
 The evening began with the Oakland sunshine beaming down on me with a suprising intensity as I exited the BART station. No matter how many times I comment on the atypical and isolated briskness of the San Francisco weather, I always forget about the idea until I'm heating up under a unnecessary fleece or heavy shirt. Such was the case as I made my way up the stairs, collected my bearings, and head out towards the sushi restaurant. 
 
@@ -27,6 +27,10 @@ Five minutes were spent in the cramped corner of a liquor store for all of us to
 I've always enjoyed the first moments entering a music venue. You are stripped away from the daylight and familiar sense of the outside world and thrown into a dark mass of people all staring straight ahead at the same thing. Usually it's just a collection of instruments, but this time the band also placed a large inflatable fish head towards the back behind the drummer. It was a very large fish, larger than it needed to be. It was very silly.
 
 The show got started and ended all too soon. It was a whirlwind of smart guitar riffs, brilliant vocal melodies, driving drum loops, and impressive performances at every vertex. I took a second during some of my favorite songs to look up at the geometric patterns on the ceiling and immerse myself in the loud, distorted, shimmering guitars. It's a feeling unlike any other.
+
+![](https://lh3.googleusercontent.com/pw/AP1GczNC0OUsQFH4F1IVNfRhY6lBxN8PyDKKHQ9jsCh6WcnPORdV_gFZni1pw5eBXdRmRluYKKPsYi4-p6NJmYeKPET2zrU-1gyiZBPGHqX84ofs4ODMRePRPotGZlpbMSHhpqwyGMU_XjK82-0ZtI1pedqXsg=w1402-h1868-s-no-gm)
+
+*the very best band in the entire world*
 
 After the show ended, we waddled our way outdoors, finding space on the street to walk in the direction towards our destinations. I bid farewell to Gavin & Ashlyn, and then Joshua & Caroline, and then I was on my own. I walked down the steps of the 19th street BART station and began my journey back home. The train was alive, mainly with concert goers, everyone a bit tired but still whirring with leftover energy. An already drunken man held up a bottle of beer and asked if anyone had an opener. I prepared to surrender my trusty keychain opener to him, but was usurped by another good samairitan one row closer. They exchanged a fist bump.
 
