--- a/src/content/posts/2..md
+++ b/src/content/posts/2..md
@@ -1,10 +1,45 @@
 ---
-pubDate: 2024-08-21
+pubDate: 2024-08-25
 author: jonald
-title: test article 2
-description: August 21, 2024
+title: a morning on the water and a journey home
+description: August 24, 2024
 image:
-  url: "https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/El_Tres_de_Mayo%2C_by_Francisco_de_Goya%2C_from_Prado_thin_black_margin.jpg/600px-El_Tres_de_Mayo%2C_by_Francisco_de_Goya%2C_from_Prado_thin_black_margin.jpg"
+  url: "https://www.edwardhopper.net/assets/img/paintings/the-long-leg.jpg"
   alt: "#"
+  info: The Long Leg - Edward Hopper
 tags: []
 ---
+
+A fly that had found its way inside buzzed around my ahead and awoke me from my slumber. My head was stirring, the affects of a combination of tequila, whiskey, red wine, and gin from the night prior. Not the worst I've felt in the morning after such a night, but enough to persistently annoy me. Though it was hard to be too annoyed once I turned my body around, laying on my back, and could see the fog rolling in on top of the hills across the water. I dusted myself off and stood up to take in the scenery.
+
+<img src="https://lh3.googleusercontent.com/pw/AP1GczOZmHt_vZoR4ZxGLRDvfnP7vNGrdYEDsgs6ryMUh-V7NWqVS_hR91E2f6gJQ8xM_nVH9kazy0QXfbqhO5RHmOcm6U_JhC2UiYWNBhibDCobCLrmq9SnydmVEfr6BSO_wiG5Iv-FK7Zv41lPh5bVWqMRhg=w1402-h1868-s-no-gm?authuser=0" title="" alt="" data-align="center">*the view from my makeshift bed on the floor*
+
+Slowly, the house came to life again as people trickled out of their rooms and made their way to the common area. Many of my compatriots were feeling similary weary, both due to the drinks as well as the lack of sleep. It was all to be expected after the night prior.
+
+We made our way out the house and meandered down towards the cafe on the water for breakfast with the water on our left and the rolling hills on our right. The weather was as beautiful as you could ever hope for, and I slowly came back to life as I consumed the fresh air.
+
+We made our way through the line at the small cafe and received our food outside. I had a lox bagel with a coffee, which was perfectly enjoyable. The energy was coming back to me, and just in time, as we finished up and crossed the road to retrieve our kayaking supplies.
+
+Our coordinator was a strong bearded man who spent quite a while informing us of all the rules and regulations of operating our rented kayaks. Despite his incredible enthusiasm, my mind was wandering and I picked up maybe 25% of what he told us. The weather was perfect, the natural beauty of the water was calling out to us, and we were anxious to get aboard.
+
+Before too long, we were off. The water was calm and steady, with just a gentle current making its way in from the river mouth to the west. We meandered our way away from the ocean to start, navigating towards a collection of harbor seals that were nesting on a section of the south riverbank.
+
+The seals were such a joy to see. We were able to see a few on land scurrying about their day and inquisitively looking at us as we passed by. We thought that would be the end of it as we made our way back west, but there were dozens of them out in the water as well. They would go for a dive and then peek their head out of the water, just long enough for you to say hello, and then they would dissapear again. I swear one of them nodded its head after I waved at it, an exchange of cross-species plesantries. 
+
+We pulled ashore a couple of times, once to explore an abandoned shack on Penny Island, and the second to explore the beach that divded the ocean from the river. I took a much needed nap in the sand as the sun fried my face.
+
+Eventually we returned back to the pier. The last ride in was the most memorable, as I took a prolonged moment to admire the scenery. In the background, the hills of Jenner were dotted with quaint vacation homes and variety of trees, all lit up under the glowing sun. In the foreground, sparkles danced across the water as the slight current carried us into the pier. In our ears, a woman with a guitar sang a song at that same cafe we ate at as a small group of patrons sat and watched. It was a moment that everyone should get to experience.
+
+I rowed onto shore and our coordinator helped me out of the kayak. I thanked him and watched a couple of the others row in as well. I took one last look at the water before going back up to the road to return the supplies.
+
+![](https://lh3.googleusercontent.com/pw/AP1GczNOzgA84Rlsv29ppK5RfadqXL58EBn0WOxRNtxb5CAUB5uxZRfQ77lWyIBY2BZuqZ8vVnwv_x0ux6fRqgbKFSZ1l0B3akkD24qqLEWNtJzJ_xPKovMa0Gw8K0pesZtX0qf_uWsJUNR0AHrirmum5iX_NQ=w1402-h1868-s-no-gm)
+
+*the serenader whom soundtracked our row into shore*
+
+---
+
+My trip back to San Francisco started at the Guernville bus stop. Dom was kind enough to help me out and drive me there, a quick 22 minute drive from our stay in Jenner. We pulled into the parking lot adjacent to the bus stop, I thanked him, grabbed my bags, and walked to the stop.
+
+The bus came within 10 minutes. I spent my time waiting desperately trying to buy a bus ticket on their horrible app, which refused to accept my credit cards without ever explaining why. Fortunately I had a one-dollar bill and my lucky two-dollar bill in my wallet, the latter of which I really did not wish to part with. It had been in my wallet for many years, packed right next to my 5 euro note from my first trip to Europe. But without any other options, I fed both bills into the machine once the bus arrived. It was the saddest bus fare of my life.
+
+I looked to improve my mood once I sat down. I put in my earbuds and queued up Feather by Sabrina Carpenter. Three minutes and 5 seconds of pop perfection later, I was in better spirits and settled in for the first leg of my journey.
