--- a/src/content/posts/2..md
+++ b/src/content/posts/2..md
@@ -43,3 +43,17 @@ My trip back to San Francisco started at the Guernville bus stop. Dom was kind e
 The bus came within 10 minutes. I spent my time waiting desperately trying to buy a bus ticket on their horrible app, which refused to accept my credit cards without ever explaining why. Fortunately I had a one-dollar bill and my lucky two-dollar bill in my wallet, the latter of which I really did not wish to part with. It had been in my wallet for many years, packed right next to my 5 euro note from my first trip to Europe. But without any other options, I fed both bills into the machine once the bus arrived. It was the saddest bus fare of my life.
 
 I looked to improve my mood once I sat down. I put in my earbuds and queued up Feather by Sabrina Carpenter. Three minutes and 5 seconds of pop perfection later, I was in better spirits and settled in for the first leg of my journey.
+
+The ride was exquisite. The bus meandered its way across wine country through Sebastapol towards downtown Santa Rosa. Vineyards surrounded us on both sides, the chaos of the vines neatly arranged into rows for what seemed like miles on end. We held at a stop sign long enough for me to see a large blackberry bush on the side of the road, overflowing with hundreds of the fruit calling out to be picked. I wondered to myself why I so seldom make the trip out to this part of the state.
+
+We arrived in Santa Rosa within an hour. I planned to take another bus from the transit depo, but audibled and walked to the train station instead, as there was a departure that lined up pefectly on timing. Within 15 minutes of getting off the bus, I was on phase three of my journey.
+
+I settled into a seat away from the sun on a mostly empty car and took my book out to read. About an hour later, I had only gotten through maybe 10 pages, as I found my eyes consistently distracted by the world that opened up through the window to my left. The train powered through a landscape that transitioned from the green overgrown backyards of the cities to the amber floor of the valley with the rolling hills just beyond. The train car fluctuated in business throughout the hour, keeping at a low murmur at its lowest and holding at a lively buzz at its highest. Every combination of scenery and ambiance was another perfect moment for a weary traveler like myself.
+
+I disembarked at San Rafael and walked to the transit station to wait for the Golden Gate Transit line that would take me back into the city. The sunshine was still bearing down, but beginning its descent into the later stages. I stretched my legs for about 15 minutes until the shuttle arrived, and the driver greeted me with a nod as I tapped my card on the register. Almost home.
+
+This leg of the trip was not as notable, but after a while my eyes were greeted by the familar sight of the northern view of the San Francisco skyline, shrouded as usual behind a layer of fog. We pierced through the fog as we crossed the Golden Gate bridge, which is always an enjoyable unique expereince. This enduring symbol of our great city attracts countless visitors from across the world, but with the heavy fog leading to low visibility on the road itself, it's difficult to take in the majesty of the bridge of the landmark. I felt warm and cozy as a contrast to the chill scene surrounding me, and before I knew it, I was dropped off in the Marina district, waiting for my last bus that would take me home.
+
+The 22 came within 10 minutes of me loitering around the stop on Lombard & Fillmore.  It was bittersweet to see the streets get more and more familiar as the bus continued due south. Four hours, a clipper card, and Google Maps had transported me from the cozy expanse of Sonoma County wine country to the familiar loud world of the dense city. I texted my sister to thank her for the wonderful weekend as the robotic bus voice announced our arrival and Hayes street.
+
+I disembarked, crossed the street, and walked up the half block to my apartment as I've done a million times before. 
